@@ -1,5 +1,6 @@
 ======= 3.0.1
 
+- added: CSS variables supports default values `border-radius: $radius || 10px`
 - fixed: `nosql.update()` and `nosql.modify()` methods if the first argument is a function
 
 ======= 3.0.0
